--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 </head>
 <body>
   <header>
-    <h1>Selamat Datang di Website Saya</h1>
+    <h1>Selamat Datang di Website kami</h1>
     <p>Ini adalah halaman yang bisa kamu hosting online</p>
   </header>
   <main>
-    <button onclick="tampilkanPesan()">Klik Saya!</button>
+    <button onclick="tampilkanPesan()">Klik untuk mulai!</button>
   </main>
   <footer>
-    <p>&copy; 2025 - Dibuat oleh Anda</p>
+    <p>&copy; 2025 - Dibuat oleh kawan</p>
   </footer>
   <script src="script.js"></script>
 </body>
